<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/md_16dp"
    tools:context=".ui.AIChatHistoryFragment">

    <LinearLayout
        android:id="@+id/llAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/xxmd_36dp"
            android:layout_height="@dimen/xxmd_36dp"
            android:src="@drawable/img_bubble_ia" />

        <TextView
            style="@style/TextLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sm_8dp"
            android:text="@string/app_name"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flwFilterStackOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/md_16dp"
        app:flow_horizontalGap="@dimen/sm_8dp"
        app:constraint_referenced_ids="chpReactNative, chpIA,
        chpGo, chpKotlin, chpCSharp, chpPHP, chpDevOps, chpFullStack,
         chpJava, chpPyton, chpReact, chpNodeJS, chpSwift"
        app:layout_constraintTop_toBottomOf="@id/llAppName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chpReactNative"
        style="@style/StackChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/react_native"
        app:chipIcon="@drawable/ic_react_native"
        tools:ignore="MissingConstraints"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chpIA"
        style="@style/StackChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ia"
        app:chipIcon="@drawable/ic_ia"
        tools:ignore="MissingConstraints"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chpGo"
        style="@style/StackChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go"
        app:chipIcon="@drawable/ic_go"
        tools:ignore="MissingConstraints"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chpKotlin"
        style="@style/StackChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kotlin"
        app:chipIcon="@drawable/ic_kotlin"
        tools:ignore="MissingConstraints"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chpCSharp"
        style="@style/StackChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/csharp"
        app:chipIcon="@drawable/ic_csharp"
        tools:ignore="MissingConstraints"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chpPHP"
        style="@style/StackChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/php"
        app:chipIcon="@drawable/ic_php"
        tools:ignore="MissingConstraints"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chpDevOps"
        style="@style/StackChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/devops"
        app:chipIcon="@drawable/ic_devops"
        tools:ignore="MissingConstraints"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chpFullStack"
        style="@style/StackChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_stack"
        app:chipIcon="@drawable/ic_fullstack"
        tools:ignore="MissingConstraints"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chpJava"
        style="@style/StackChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/java"
        app:chipIcon="@drawable/ic_java"
        tools:ignore="MissingConstraints"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chpPyton"
        style="@style/StackChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/python"
        app:chipIcon="@drawable/ic_python"
        tools:ignore="MissingConstraints"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chpReact"
        style="@style/StackChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/react"
        app:chipIcon="@drawable/ic_react"
        tools:ignore="MissingConstraints"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chpNodeJS"
        style="@style/StackChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/node_js"
        app:chipIcon="@drawable/ic_nodejs"
        tools:ignore="MissingConstraints"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chpSwift"
        style="@style/StackChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swift"
        app:chipIcon="@drawable/ic_swift"
        tools:ignore="MissingConstraints"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcHistoryAIChat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flwFilterStackOptions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/sm_8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>